fix line-height of teaser sumary in preview to limit reduce height on small screen

--- a/src/styl/_components/_preview.styl
+++ b/src/styl/_components/_preview.styl
@@ -38,6 +38,7 @@
 
         &-summary
             font-weight normal
+            line-height 1.5
 
             @media $breakpoints.sm
                 font-size .9em
